database on init for users microservice, front end fixed with login and pictures list, todo: front end for circuit breaker changes and heald end point